# aw-watcher-table

./: .gitignore  README.md  aw.spec  aw_linux.spec  aw_windows.spec  pyinstaller.spec  pyproject.toml
.github/workflows/: build-release.yml  linux.yml
Arduino_UNO_WIFI_r2/: Arduino_UNO_WIFI_r2.ino  secrets.example.h
ESP8266/: ESP8266.ino
aw_watcher_table/: __init__.py  config.py  settings.py  watcher.py
static/: index.html
