[tool.poetry]
name = "aw-watcher-table"
version = "1.1.0"
description = "Monitors whether you have set your height-adjustable table to sitting or standing."
authors = ["Alwin Schuster"]
license = "MPL-2.0"
homepage = "https://alwinschuster.at"
repository = "https://git.alwinschuster.at/alwin.schuster/activity-watcher-height-adjustable-table"
documentation = "https://git.alwinschuster.at/alwin.schuster/activity-watcher-height-adjustable-table"

[tool.poetry.scripts]
aw-watcher-table = "aw_watcher_table:main"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
aw-core = {git = "https://github.com/ActivityWatch/aw-core.git"}
aw-client = {git = "https://github.com/ActivityWatch/aw-client.git"}

[tool.poetry.dev-dependencies]
pyinstaller = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
