[tool.poetry]
name = "aw-watcher-table"
version = "1.2.0"
description = "Monitors whether you have set your height-adjustable table to sitting or standing."
authors = ["Alwin Schuster"]
license = "MPL-2.0"
homepage = "https://alwinschuster.at"
repository = "https://github.com/Alwinator/aw-watcher-table"
documentation = "https://github.com/Alwinator/aw-watcher-table"

[tool.poetry.scripts]
aw-watcher-table = "aw_watcher_table:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.27.1"
aw-core = {git = "https://github.com/ActivityWatch/aw-core.git"}
aw-client = {git = "https://github.com/ActivityWatch/aw-client.git"}

[tool.poetry.dev-dependencies]
pyinstaller = "^5.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
